--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "dev": "nodemon index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+        "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
     },
     "author": "Matti Luukkainen",
     "license": "MIT",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^7.4.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
